creat cart overlay, add finishing touches

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Condensed:wght@300;400;700&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
-*, html {
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Condensed:wght@300;400;700&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
+*,
+html {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -11,10 +12,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #fff;
-  color: #1D1F22;
+  color: #1d1f22;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.App {
+.main {
   padding-top: 140px;
 }
 
@@ -22,4 +26,3 @@ a {
   all: unset;
   cursor: pointer;
 }
-
